--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.7",
     "antd": "^5.7.3",
     "autoprefixer": "10.4.14",
+    "child_process": "^1.0.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "lodash": "^4.17.21",
