--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "annyang": "^2.6.1",
     "antd": "^5.7.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
@@ -31,6 +32,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/annyang": "^2.6.2",
     "sass": "^1.64.1"
   }
 }
