--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.16.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/lodash": "^4.14.196",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
@@ -28,6 +29,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
