--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "child_process": "^1.0.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "firebase": "^10.1.0",
+    "firebase-admin": "^11.10.1",
     "lodash": "^4.17.21",
     "next": "13.4.12",
     "openai": "^3.3.0",
