--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.16.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/lodash": "^4.14.196",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.1",
+    "@vercel/postgres": "^0.4.1",
     "annyang": "^2.6.1",
     "antd": "^5.7.3",
     "autoprefixer": "10.4.14",
@@ -23,12 +26,16 @@
     "child_process": "^1.0.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "faunadb": "^4.8.0",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
     "lodash": "^4.17.21",
     "next": "13.4.12",
+    "next-auth": "^4.22.5",
+    "nodemailer": "^6.9.4",
     "openai": "^3.3.0",
     "postcss": "8.4.27",
+    "prisma": "^5.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
