--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/lodash": "^4.14.196",
-    "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.1",
@@ -42,10 +41,13 @@
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/annyang": "^2.6.2",
+    "@types/node": "^20.4.9",
+    "@types/uuid": "^9.0.2",
     "sass": "^1.64.1"
   }
 }
