--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/annyang": "^2.6.2",
     "@types/node": "^20.4.9",
     "@types/uuid": "^9.0.2",
+    "cypress": "^12.17.3",
     "sass": "^1.64.1"
   }
 }
