--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "prisma generate && next build",
     "start": "next build && next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "cypress": "cypress open",
+    "e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
+    "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\""
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.16.0",
@@ -49,6 +52,7 @@
     "@types/node": "^20.4.9",
     "@types/uuid": "^9.0.2",
     "cypress": "^12.17.3",
-    "sass": "^1.64.1"
+    "sass": "^1.64.1",
+    "start-server-and-test": "^2.0.0"
   }
 }
