--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,8 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           build: npm run build
-          runTest: false
+          start: npm run start
+          browser: chrome
 
       - name: Save build folder
         uses: actions/upload-artifact@v3
