--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
-name: Cypress Tests
+name: Run cypress testing
 on: [push]
 jobs:
-  install:
+  cypress-run:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -12,36 +12,7 @@ jobs:
         with:
           build: npm run build
           start: npm run start
-          browser: chrome
-
-      - name: Save build folder
-        uses: actions/upload-artifact@v3
-        with:
-          name: build
-          if-no-files-found: error
-          path: build
-
-  cypress-run:
-    runs-on: ubuntu-latest
-    container: cypress/browsers:node16.16.0-chrome107-ff107-edge
-    needs: install
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Download the build folder
-        uses: actions/download-artifact@v3
-        with:
-          name: build
-          path: build
-
-      - name: Cypress run
-        uses: cypress-io/github-actions@v5
-        with:
-          start: npm run start
-          # wait-on: 'http://localhost:3000'
-          # record: true
-          # parallel: true
+          record: true
           browser: chrome
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
@@ -53,5 +24,3 @@ jobs:
 
           NEXTAUTH_SECRET: YegyDIZNJPqxOkGS4K0F/o9l3SjCxCUR4Q/45rGyOtA
           NEXTAUTH_URL: http://rangachat.com/"
-
-
