--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ GOOGLE_CLIENT_SECRET="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"
 
 NEXTAUTH_SECRET="YegyDIZNJPqxOkGS4K0F/o9l3SjCxCUR4Q/45rGyOtA="
 NEXTAUTH_URL="http://localhost:3000"
+BASE_URL="http://localhost:3000"
