--- a/.env.production
+++ b/.env.production
@@ -11,3 +11,4 @@ GOOGLE_SECRET="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"
 
 NEXTAUTH_SECRET="YegyDIZNJPqxOkGS4K0F/o9l3SjCxCUR4Q/45rGyOtA="
 NEXTAUTH_URL="http://rangachat.com/"
+BASE_URL="http://rangachat.com/"
