--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.16.0",
+    "@google-cloud/text-to-speech": "^5.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/lodash": "^4.14.196",
