--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "lodash": "^4.17.21",
     "next": "13.4.12",
     "next-auth": "^4.22.5",
+    "next-compose-plugins": "^2.2.1",
+    "next-pwa": "^5.6.0",
     "nodemailer": "^6.9.4",
     "openai": "^3.3.0",
     "postcss": "8.4.27",
