--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
+    "start:local": "prisma generate && next build && next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
     "cypress": "cypress open",
@@ -17,7 +18,6 @@
     "@google-cloud/text-to-speech": "^5.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@reduxjs/toolkit": "^1.9.5",
-    "@tanstack/react-query": "^4.32.6",
     "@types/lodash": "^4.14.196",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
