--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ant-design/cssinjs": "^1.16.0",
     "@google-cloud/text-to-speech": "^5.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.3.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/lodash": "^4.14.196",
     "@types/react": "18.2.17",
