--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "axios": "^1.4.0",
     "child_process": "^1.0.2",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.12",
+    "eslint-config-next": "^13.5.1",
     "faunadb": "^4.8.0",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
     "lodash": "^4.17.21",
-    "next": "13.4.12",
+    "next": "^13.5.1",
     "next-auth": "^4.22.5",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.6.0",
@@ -43,8 +43,8 @@
     "openai": "^3.3.0",
     "postcss": "8.4.27",
     "prisma": "^5.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
