--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.16.0",
+    "@auth/firebase-adapter": "^1.0.0",
     "@google-cloud/text-to-speech": "^5.0.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
+    "@next-auth/firebase-adapter": "^2.0.1",
     "@prisma/client": "^5.3.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/lodash": "^4.14.196",
@@ -36,7 +37,7 @@
     "firebase-admin": "^11.10.1",
     "lodash": "^4.17.21",
     "next": "^13.5.1",
-    "next-auth": "^4.22.5",
+    "next-auth": "^4.23.1",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.6.0",
     "nodemailer": "^6.9.4",
