--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
-    "start:local": "prisma generate && next build && next start",
+    "start:local": "next build && next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
     "cypress": "cypress open",
     "e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
     "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\""
@@ -18,32 +17,28 @@
     "@auth/firebase-adapter": "^1.0.0",
     "@google-cloud/text-to-speech": "^5.0.0",
     "@next-auth/firebase-adapter": "^2.0.1",
-    "@prisma/client": "^5.3.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/formidable": "^3.4.3",
     "@types/lodash": "^4.14.196",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.1",
     "@vercel/postgres": "^0.4.1",
-    "annyang": "^2.6.1",
     "antd": "^5.7.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "child_process": "^1.0.2",
     "eslint": "8.45.0",
     "eslint-config-next": "^13.5.1",
-    "faunadb": "^4.8.0",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
+    "formidable": "^3.5.1",
     "lodash": "^4.17.21",
     "next": "^13.5.1",
     "next-auth": "^4.23.1",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.6.0",
-    "nodemailer": "^6.9.4",
     "openai": "^3.3.0",
     "postcss": "8.4.27",
-    "prisma": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
