--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ant-design/cssinjs": "^1.16.0",
     "@auth/firebase-adapter": "^1.0.0",
     "@google-cloud/text-to-speech": "^5.0.0",
+    "@google-cloud/translate": "^8.0.2",
     "@next-auth/firebase-adapter": "^2.0.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/formidable": "^3.4.3",
