--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/node": "^20.4.9",
     "@types/uuid": "^9.0.2",
     "cypress": "^12.17.3",
+    "encoding": "^0.1.13",
     "sass": "^1.64.1",
     "start-server-and-test": "^2.0.0"
   }
