--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\""
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@auth/firebase-adapter": "^1.0.0",
+    "@clerk/nextjs": "^4.27.1",
     "@google-cloud/text-to-speech": "^5.0.0",
     "@google-cloud/translate": "^8.0.2",
     "@next-auth/firebase-adapter": "^2.0.1",
@@ -22,7 +24,7 @@
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.1",
-    "antd": "^5.9.2",
+    "antd": "^5.11.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.45.0",
@@ -32,9 +34,10 @@
     "lodash": "^4.17.21",
     "next": "^13.5.1",
     "next-auth": "^4.23.1",
+    "next-cloudinary": "^5.7.0",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.6.0",
-    "openai": "^3.3.0",
+    "openai": "^4.19.0",
     "postcss": "8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,7 +46,7 @@
     "redux": "^4.2.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/annyang": "^2.6.2",
