--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "antd": "^5.11.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.10",
     "eslint": "8.45.0",
     "eslint-config-next": "^13.5.1",
     "firebase-admin": "^11.10.1",
