--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "@google-cloud/translate": "^8.0.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/lodash": "^4.14.196",
-    "@types/react": "18.2.17",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "@vercel/analytics": "^1.0.1",
     "antd": "^5.11.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "dayjs": "^1.11.10",
     "eslint": "8.45.0",
-    "eslint-config-next": "^13.5.1",
+    "eslint-config-next": "^14.0.3",
     "firebase-admin": "^11.10.1",
     "lodash": "^4.17.21",
-    "next": "^13.5.1",
+    "next": "^14.0.3",
     "next-cloudinary": "^5.7.0",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.6.0",
