--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "python.formatting.provider": "none",
   "editor.formatOnSave": true,
   "editor.formatOnSaveMode": "modifications",
-  "editor.formatOnType": true
+  "editor.formatOnType": true,
+  "editor.inlineSuggest.showToolbar": "onHover"
 }
