--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\""
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.18.0-alpha.5",
     "@ant-design/icons": "^5.2.6",
     "@auth/firebase-adapter": "^1.0.0",
     "@clerk/nextjs": "^4.27.1",
