--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@google-cloud/text-to-speech": "^5.0.0",
     "@google-cloud/translate": "^8.0.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@types/lodash": "^4.14.196",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
@@ -27,6 +29,7 @@
     "antd": "^5.11.1",
     "autoprefixer": "10.4.16",
     "axios": "^1.4.0",
+    "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
     "eslint": "8.54.0",
     "eslint-config-next": "^14.0.3",
@@ -43,9 +46,11 @@
     "react-player": "^2.12.0",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
+    "stripe": "^14.7.0",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/annyang": "^2.6.2",
