--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ant-design/icons": "^5.2.6",
     "@auth/firebase-adapter": "^1.0.0",
     "@clerk/nextjs": "^4.27.1",
+    "@emotion/css": "^11.11.2",
     "@google-cloud/text-to-speech": "^5.0.0",
     "@google-cloud/translate": "^8.0.2",
     "@reduxjs/toolkit": "^1.9.5",
