--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "start:local": "next build && next start",
     "lint": "next lint",
+    "postbuild": "next-sitemap",
     "cypress": "cypress open",
     "e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
     "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\""
@@ -32,12 +33,14 @@
     "dayjs": "^1.11.10",
     "eslint": "8.54.0",
     "eslint-config-next": "^14.0.3",
+    "feeder-react-feedback": "^0.0.6",
     "firebase-admin": "^11.10.1",
     "lodash": "^4.17.21",
     "next": "^14.0.3",
     "next-cloudinary": "^5.7.0",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.6.0",
+    "next-sitemap": "^4.2.3",
     "openai": "^4.19.0",
     "postcss": "8.4.31",
     "react": "^18.2.0",
