--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
           GOOGLE_SECRET: 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"
 
           NEXTAUTH_SECRET: YegyDIZNJPqxOkGS4K0F/o9l3SjCxCUR4Q/45rGyOtA
-          NEXTAUTH_URL: http://rangachat.com/"
+          NEXTAUTH_URL: http://talk4learn.com/"
