--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@google-cloud/translate": "^8.0.2",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
+    "@tanstack/react-query": "^5.14.6",
     "@types/lodash": "^4.14.196",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
