--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
     "stripe": "^14.7.0",
-    "tailwindcss": "3.3.5",
+    "tailwindcss": "^3.4.0",
     "typescript": "5.2.2",
     "uuid": "^9.0.1",
     "zustand": "^4.4.7"
