--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vercel/analytics": "^1.0.1",
+    "@vercel/speed-insights": "^1.0.2",
     "antd": "^5.11.1",
     "autoprefixer": "10.4.16",
     "axios": "^1.4.0",
