--- a/.env.production
+++ b/.env.production
@@ -11,6 +11,8 @@ CLERK_SECRET_KEY=sk_live_kzFd7r4qFMg6qpNkEcx1daUXmhCN9LOuUadTIJ9IvR
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL="/home"
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL="/home"
 
 OPENAI_API_KEY="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"
 
