--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-config-next": "^14.0.3",
     "feeder-react-feedback": "^0.0.6",
     "firebase-admin": "^11.10.1",
+    "install": "^0.13.0",
     "lodash": "^4.17.21",
     "next": "^14.0.3",
     "next-cloudinary": "^5.7.0",
@@ -48,6 +49,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
+    "react-router-dom": "^6.21.1",
     "stripe": "^14.7.0",
     "tailwindcss": "^3.4.0",
     "typescript": "5.2.2",
